--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
                         <div class="input-field">
                             <label>Year of Study</label>
-                            <input type="text" name="your-year" id="" placeholder="Enter year of Study">
+                            <input type="text" name="your-year" id="" placeholder="Enter year of Study e.g: 1,2,3,4">
                         </div>
 
                         <div class="input-field">
