--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
                         <div class="input-field">
                             <label>Department</label>
-                            <input type="text" name="your-department" placeholder="Enter department" required>
+                            <input type="text" name="your-department" placeholder="Enter department e.g: B.E CSE" required>
                         </div>
 
                         <div class="input-field">
