--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
                         <div class="input-field">
                             <label>Chitkara Email id</label>
-                            <input type="text" name="your-email"  placeholder="Enter your email" required>
+                            <input type="text" name="your-email"  placeholder="Enter your chitkara email" required>
                         </div>
 
                         <div class="input-field">
