--- a/index.html
+++ b/index.html
@@ -38,14 +38,14 @@
                         </div>
 
                         <div class="input-field">
-                            <label>Roll no. </label>
+                            <label>Roll Number </label>
                             <input type="text" name="your-rollnumber" placeholder="Enter Roll no.">
                         </div>
                     </form>
 
                         <div class="input-field">
-                            <label>Mobile Number</label>
-                            <input type="text" name="your-number" placeholder="Enter mobile number" required>
+                            <label>Contact Number</label>
+                            <input type="text" name="your-number" placeholder="Enter contact number" required>
                         </div>
 
 
