--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 </head>
 <body>
     <div class="container">
-        <h1 CLASS="chapter">Department of Applied Sciences, Chitkara University (Punjab) is organizing a National Symposium on Greentech Innovate: Navigating Waste Challenges Towards a Sustainable Future on  Dec 11-12</h1>
-        <h3>ISTE CHITKRA STUDENT CHAPTER</h3>
+        <h1 CLASS="chapter">Registrations are closed now!</h1>
+<!--         <h3>ISTE CHITKRA STUDENT CHAPTER</h3>
         <header></header>
         <form method="post" action="https://script.google.com/macros/s/AKfycbw5T8_nZLI3JIvEAGcIQHl6p1Hsh5SqxIFYrabwp4H1zf5JQKR_ro1_HD02WlWcz8ayYg/exec" name="contact-form" >
             <div class="form first">
@@ -70,7 +70,7 @@
                         </div>
                     </div>
                     <input type="submit" value="Submit" id="submit"><br><br>
-                </div>
+                </div> -->
 
                 <!-- <div class="details ID">
 
