--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 <body>
     <div class="container">
-        <h1 CLASS="chapter">Registrations are closed now!</h1>
+        <h1 CLASS="chapter">Registration is closed now!</h1>
 <!--         <h3>ISTE CHITKRA STUDENT CHAPTER</h3>
         <header></header>
         <form method="post" action="https://script.google.com/macros/s/AKfycbw5T8_nZLI3JIvEAGcIQHl6p1Hsh5SqxIFYrabwp4H1zf5JQKR_ro1_HD02WlWcz8ayYg/exec" name="contact-form" >
